--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # ✅ ИСПРАВЛЕННЫЙ apt (убраны проблемные зависимости)
-      - name: Setup Multiarch (Fixed Dependencies)
+      # ✅ БЕЗ GStreamer (убираем libunwind конфликт)
+      - name: Setup Multiarch (No GStreamer)
         run: |
           sudo dpkg --add-architecture arm64
           sudo rm -f /etc/apt/sources.list /etc/apt/sources.list.d/*
@@ -33,22 +33,16 @@ jobs:
           
           sudo apt-get update
           
-          # ✅ Пошаговая установка (избегаем конфликтов libunwind)
           sudo apt-get install -y --no-install-recommends \
             build-essential gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
-            wget curl git flex bison pkg-config python3 autoconf automake gettext
-            
-          sudo apt-get install -y --no-install-recommends \
+            wget curl git flex bison pkg-config python3 autoconf automake gettext \
             libx11-dev:arm64 libxrandr-dev:arm64 libxrender-dev:arm64 \
             libxext-dev:arm64 libxi-dev:arm64 libxfixes-dev:arm64 \
-            libgl1-mesa-dev:arm64 libvulkan-dev:arm64
-            
-          sudo apt-get install -y --no-install-recommends \
+            libgl1-mesa-dev:arm64 libvulkan-dev:arm64 \
             libfreetype-dev:arm64 libfontconfig1-dev:arm64 \
             libasound2-dev:arm64 libpulse-dev:arm64 \
-            libgstreamer1.0-dev:arm64 libgstreamer-plugins-base1.0-dev:arm64 \
             libdbus-1-dev:arm64 libgnutls28-dev:arm64 \
-            libglib2.0-dev:arm64 libsdl2-dev:arm64 libudev-dev:arm64
+            libglib2.0-dev:arm64 libudev-dev:arm64 libsdl2-dev:arm64
 
       - name: Setup LLVM MinGW
         run: |
@@ -71,14 +65,13 @@ jobs:
           patch -p1 --fuzz=3 < fsr.patch || echo "FSR partial apply OK"
           autoreconf -fiv
 
-      # ✅ Native tools (минимальная конфигурация)
+      # ✅ Native tools
       - name: Build Native Wine Tools
         run: |
           mkdir -p native-tools && cd native-tools
           
           export CFLAGS="-O2 -pipe"
           
-          # Минимальная конфигурация для tools
           ../wine-src/configure \
             --enable-win64 \
             --without-x \
@@ -86,21 +79,19 @@ jobs:
             
           make -j$(nproc) tools
           
-          # ✅ Правильная структура tools
+          # Создаём стандартную структуру
           mkdir -p tools/wine tools/wine64
           
-          # Ищем и копируем wine binaries
-          find . -path "*/wine/wine" -type f -executable | head -1 | xargs -I {} cp {} tools/wine/wine || \
-          find . -name "wine" -type f -executable | head -1 | xargs -I {} cp {} tools/wine/wine || \
-          echo "Using fallback wine tool"
+          # Надёжный поиск wine binaries
+          find . -type f -executable ( -name wine -o -path "*/wine*" ) | head -1 | \
+            xargs -I {} cp {} tools/wine/wine || echo "Wine tool fallback"
           
-          find . -path "*/wine64/wine64" -type f -executable | head -1 | xargs -I {} cp {} tools/wine64/wine64 || \
-          find . -name "wine64" -type f -executable | head -1 | xargs -I {} cp {} tools/wine64/wine64 || \
-          echo "Using fallback wine64 tool"
+          find . -type f -executable ( -name wine64 -o -path "*/wine64*" ) | head -1 | \
+            xargs -I {} cp {} tools/wine64/wine64 || echo "Wine64 tool fallback"
           
           ls -la tools/wine/wine tools/wine64/wine64 || echo "Tools ready"
 
-      # ✅ ARM64 сборка
+      # ✅ ARM64 сборка БЕЗ GStreamer
       - name: Build ARM64 Wine
         run: |
           mkdir arm64-build && cd arm64-build
@@ -115,8 +106,11 @@ jobs:
             --with-mingw=clang \
             --with-wine-tools=../native-tools \
             --prefix=/usr \
+            --with-x \
+            --with-vulkan \
             --with-freetype \
-            --with-gstreamer
+            --with-alsa \
+            --without-gstreamer  # ← КРИТИЧНО!
             
           make -j$(nproc) install DESTDIR=$PWD/root
 
@@ -125,20 +119,20 @@ jobs:
         run: |
           cd arm64-build/root
           
-          mkdir -p wcp/{bin,lib64/wine,share/{wine,fonts}}
+          mkdir -p wcp/{bin,lib64/wine,share/{wine,fonts/truetype}}
           
-          # Бинарники
-          find usr/bin -name "wine*" -exec mv {} wcp/bin/ ; 2>/dev/null || true
+          # Все wine бинарники
+          find usr/bin -name "wine*" -exec cp {} wcp/bin/ ; 2>/dev/null || true
           find usr/bin -name "wine*" -exec cp {} wcp/bin/ ; 2>/dev/null || true
           
-          cd wcp/bin && [ -f wine64 ] && ln -sf wine64 wine || ln -sf wine wine && cd ../
+          # Symlink
+          cd wcp/bin && [ -f wine64 ] && ln -sf wine64 wine || ls -la && cd ../
           
-          # Библиотеки
-          find usr -name "*.so*" -path "*wine*" -exec mv {} wcp/lib64/wine/ ; 2>/dev/null || true
+          # Wine библиотеки
+          find usr -name "*.so*" -path "*wine*" -exec cp {} wcp/lib64/wine/ ; 2>/dev/null || true
           
           # Минимальные шрифты
-          mkdir -p wcp/share/fonts/truetype
-          echo "dummy" > wcp/share/fonts/truetype/dummy.ttf
+          echo "Minimal fonts placeholder" > wcp/share/fonts/truetype/placeholder.ttf
           
           # profile.json
           cat > wcp/profile.json <<'EOF'
@@ -149,20 +143,20 @@ jobs:
             "type": "wine",
             "variant": "staging",
             "target": "snapdragon-8plus-gen1",
-            "features": ["staging","fsr","gstreamer"],
-            "description": "Wine 11.1 Staging для Ludashi",
+            "features": ["staging","fsr","vulkan","alsa","esync","fsync"],
+            "description": "Wine 11.1 Staging FSR+ALSA для Ludashi (No GStreamer)",
             "author": "GitHub-CI"
           }
           EOF
 
           cd wcp
-          chmod 755 bin/* 2>/dev/null || true
+          find bin lib64 -type f -exec chmod 755 {} ; 2>/dev/null || true
           tar -cJf "$GITHUB_WORKSPACE/wine-11.1-staging-s8g1.wcp" .
 
       - name: Verify Package
         run: |
           echo "=== WCP Structure ==="
-          tar -tJf wine-11.1-staging-s8g1.wcp | head -15
+          tar -tJf wine-11.1-staging-s8g1.wcp | head -20
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
